# ai-consensus-cli

./: CONFIG.md  Cargo.toml  LICENSE  README.md  config.toml  install.sh
src/: config.rs  consensus.rs  constants.rs  errors.rs  lib.rs  main.rs  tools.rs  ui.rs  validation.rs
tests/: integration_tests.rs
